Refactor and consolidation